# pandoc-latex-environment

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  README.md  pandoc_latex_environment.py  pyproject.toml  setup.cfg  setup.py  tox.ini  whitelist.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  index.rst  requirements.txt  usage.md
pandoc_latex_environment/: _main.py
src/pandoc_latex_environment/: __init__.py  _main.py
tests/: test_div.py
